--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Visualización Indicadores - 250509</title>
-</head>
-<body style="background-color:black; color:white; font-family:sans-serif;">
-    <h1>📊 Visualizaciones - 250509</h1>
-    <ul>
-        <li><a href="250509_spy_gex_history.html" target="_blank">SPY_GEX_HISTORY</a></li><li><a href="250509_spx_gex_history.html" target="_blank">SPX_GEX_HISTORY</a></li><li><a href="250509_qqq_gex_history.html" target="_blank">QQQ_GEX_HISTORY</a></li><li><a href="250509_ndx_gex_history.html" target="_blank">NDX_GEX_HISTORY</a></li>
-    </ul>
-</body>
-</html>
+<html>
+<head><title>GEX Dashboard - Índice</title></head>
+<body style="background-color: black; color: white; font-family: Arial">
+<h1>GEX Dashboards por Día</h1>
+<ul>
+<li><a href="2025-05-09/ndx_gex_history.html" style="color: cyan;">2025-05-09 - NDX</a></li>
+<li><a href="2025-05-09/qqq_gex_history.html" style="color: cyan;">2025-05-09 - QQQ</a></li>
+<li><a href="2025-05-09/spx_gex_history.html" style="color: cyan;">2025-05-09 - SPX</a></li>
+<li><a href="2025-05-09/spy_gex_history.html" style="color: cyan;">2025-05-09 - SPY</a></li>
+</ul></body></html>
