--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
 <body style="background-color: black; color: white; font-family: Arial">
 <h1>GEX Dashboards por Día</h1>
 <ul>
-<li><a href="2025-05-09/ndx_gex_history.html" style="color: cyan;">2025-05-09 - NDX</a></li>
-<li><a href="2025-05-09/qqq_gex_history.html" style="color: cyan;">2025-05-09 - QQQ</a></li>
-<li><a href="2025-05-09/spx_gex_history.html" style="color: cyan;">2025-05-09 - SPX</a></li>
-<li><a href="2025-05-09/spy_gex_history.html" style="color: cyan;">2025-05-09 - SPY</a></li>
+<li><a href="2025-05-09\ndx_gex_history.html" style="color: cyan;">2025-05-09 - NDX</a></li>
+<li><a href="2025-05-09\qqq_gex_history.html" style="color: cyan;">2025-05-09 - QQQ</a></li>
+<li><a href="2025-05-09\spx_gex_history.html" style="color: cyan;">2025-05-09 - SPX</a></li>
+<li><a href="2025-05-09\spy_gex_history.html" style="color: cyan;">2025-05-09 - SPY</a></li>
+<li><a href="2025-05-08\ndx_gex_history.html" style="color: cyan;">2025-05-08 - NDX</a></li>
+<li><a href="2025-05-08\qqq_gex_history.html" style="color: cyan;">2025-05-08 - QQQ</a></li>
+<li><a href="2025-05-08\spx_gex_history.html" style="color: cyan;">2025-05-08 - SPX</a></li>
+<li><a href="2025-05-08\spy_gex_history.html" style="color: cyan;">2025-05-08 - SPY</a></li>
+<li><a href="2025-05-07\ndx_gex_history.html" style="color: cyan;">2025-05-07 - NDX</a></li>
+<li><a href="2025-05-07\qqq_gex_history.html" style="color: cyan;">2025-05-07 - QQQ</a></li>
+<li><a href="2025-05-07\spx_gex_history.html" style="color: cyan;">2025-05-07 - SPX</a></li>
+<li><a href="2025-05-07\spy_gex_history.html" style="color: cyan;">2025-05-07 - SPY</a></li>
+<li><a href="2025-05-06\ndx_gex_history.html" style="color: cyan;">2025-05-06 - NDX</a></li>
+<li><a href="2025-05-06\qqq_gex_history.html" style="color: cyan;">2025-05-06 - QQQ</a></li>
+<li><a href="2025-05-06\spx_gex_history.html" style="color: cyan;">2025-05-06 - SPX</a></li>
+<li><a href="2025-05-06\spy_gex_history.html" style="color: cyan;">2025-05-06 - SPY</a></li>
+<li><a href="2025-05-05\ndx_gex_history.html" style="color: cyan;">2025-05-05 - NDX</a></li>
+<li><a href="2025-05-05\qqq_gex_history.html" style="color: cyan;">2025-05-05 - QQQ</a></li>
+<li><a href="2025-05-05\spx_gex_history.html" style="color: cyan;">2025-05-05 - SPX</a></li>
+<li><a href="2025-05-05\spy_gex_history.html" style="color: cyan;">2025-05-05 - SPY</a></li>
+<li><a href="2025-05-02\ndx_gex_history.html" style="color: cyan;">2025-05-02 - NDX</a></li>
+<li><a href="2025-05-02\qqq_gex_history.html" style="color: cyan;">2025-05-02 - QQQ</a></li>
+<li><a href="2025-05-02\spx_gex_history.html" style="color: cyan;">2025-05-02 - SPX</a></li>
+<li><a href="2025-05-02\spy_gex_history.html" style="color: cyan;">2025-05-02 - SPY</a></li>
 </ul></body></html>
