--- a/index.html
+++ b/index.html
@@ -1,30 +1,139 @@
 <html>
-<head><title>GEX Dashboard - Índice</title></head>
-<body style="background-color: black; color: white; font-family: Arial">
+<head>
+    <title>GEX Dashboard - Índice</title>
+    <style>
+        body {
+            background-color: black; 
+            color: white; 
+            font-family: Arial;
+            margin: 20px;
+        }
+        h1 {
+            color: cyan;
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: left;
+        }
+        td {
+            padding: 8px;
+            border-bottom: 1px solid #444;
+            vertical-align: top;
+        }
+        tr:hover {
+            background-color: #222;
+        }
+        a {
+            color: cyan;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .file-list {
+            list-style-type: none;
+            padding-left: 5px;
+        }
+        .file-list li {
+            margin-bottom: 5px;
+        }
+        .date-header {
+            color: orange;
+            font-weight: bold;
+            margin-top: 15px;
+        }
+    </style>
+</head>
+<body>
 <h1>GEX Dashboards por Día</h1>
-<ul>
-<li><a href="2025-05-09\ndx_gex_history.html" style="color: cyan;">2025-05-09 - NDX</a></li>
-<li><a href="2025-05-09\qqq_gex_history.html" style="color: cyan;">2025-05-09 - QQQ</a></li>
-<li><a href="2025-05-09\spx_gex_history.html" style="color: cyan;">2025-05-09 - SPX</a></li>
-<li><a href="2025-05-09\spy_gex_history.html" style="color: cyan;">2025-05-09 - SPY</a></li>
-<li><a href="2025-05-08\ndx_gex_history.html" style="color: cyan;">2025-05-08 - NDX</a></li>
-<li><a href="2025-05-08\qqq_gex_history.html" style="color: cyan;">2025-05-08 - QQQ</a></li>
-<li><a href="2025-05-08\spx_gex_history.html" style="color: cyan;">2025-05-08 - SPX</a></li>
-<li><a href="2025-05-08\spy_gex_history.html" style="color: cyan;">2025-05-08 - SPY</a></li>
-<li><a href="2025-05-07\ndx_gex_history.html" style="color: cyan;">2025-05-07 - NDX</a></li>
-<li><a href="2025-05-07\qqq_gex_history.html" style="color: cyan;">2025-05-07 - QQQ</a></li>
-<li><a href="2025-05-07\spx_gex_history.html" style="color: cyan;">2025-05-07 - SPX</a></li>
-<li><a href="2025-05-07\spy_gex_history.html" style="color: cyan;">2025-05-07 - SPY</a></li>
-<li><a href="2025-05-06\ndx_gex_history.html" style="color: cyan;">2025-05-06 - NDX</a></li>
-<li><a href="2025-05-06\qqq_gex_history.html" style="color: cyan;">2025-05-06 - QQQ</a></li>
-<li><a href="2025-05-06\spx_gex_history.html" style="color: cyan;">2025-05-06 - SPX</a></li>
-<li><a href="2025-05-06\spy_gex_history.html" style="color: cyan;">2025-05-06 - SPY</a></li>
-<li><a href="2025-05-05\ndx_gex_history.html" style="color: cyan;">2025-05-05 - NDX</a></li>
-<li><a href="2025-05-05\qqq_gex_history.html" style="color: cyan;">2025-05-05 - QQQ</a></li>
-<li><a href="2025-05-05\spx_gex_history.html" style="color: cyan;">2025-05-05 - SPX</a></li>
-<li><a href="2025-05-05\spy_gex_history.html" style="color: cyan;">2025-05-05 - SPY</a></li>
-<li><a href="2025-05-02\ndx_gex_history.html" style="color: cyan;">2025-05-02 - NDX</a></li>
-<li><a href="2025-05-02\qqq_gex_history.html" style="color: cyan;">2025-05-02 - QQQ</a></li>
-<li><a href="2025-05-02\spx_gex_history.html" style="color: cyan;">2025-05-02 - SPX</a></li>
-<li><a href="2025-05-02\spy_gex_history.html" style="color: cyan;">2025-05-02 - SPY</a></li>
-</ul></body></html>
+<table>
+    <thead>
+        <tr>
+            <th>Fecha</th>
+            <th>GEX History</th>
+            <th>Data Flow</th>
+        </tr>
+    </thead>
+    <tbody>
+
+    <tr>
+        <td class="date-header">2025-05-09</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-09\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-09\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-09\spx_gex_history.html">SPX</a></li><li><a href="2025-05-09\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-09\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-09\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-09\spx_data_flow.html">SPX</a></li><li><a href="2025-05-09\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-05-08</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-08\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-08\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-08\spx_gex_history.html">SPX</a></li><li><a href="2025-05-08\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-08\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-08\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-08\spx_data_flow.html">SPX</a></li><li><a href="2025-05-08\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-05-07</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-07\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-07\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-07\spx_gex_history.html">SPX</a></li><li><a href="2025-05-07\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-07\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-07\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-07\spx_data_flow.html">SPX</a></li><li><a href="2025-05-07\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-05-06</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-06\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-06\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-06\spx_gex_history.html">SPX</a></li><li><a href="2025-05-06\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-06\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-06\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-06\spx_data_flow.html">SPX</a></li><li><a href="2025-05-06\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-05-05</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-05\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-05\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-05\spx_gex_history.html">SPX</a></li><li><a href="2025-05-05\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-05\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-05\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-05\spx_data_flow.html">SPX</a></li><li><a href="2025-05-05\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-05-02</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-02\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-02\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-02\spx_gex_history.html">SPX</a></li><li><a href="2025-05-02\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-02\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-02\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-02\spx_data_flow.html">SPX</a></li><li><a href="2025-05-02\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<p style="color: gray; font-size: 12px; margin-top: 20px;">
+Nota: Los gráficos incluyen un botón para alternar entre vista acumulada y directa<br>
+GEX_BY_OI y GEX_BY_VOLUME solo disponibles en modo acumulado
+</p>
+</body></html>
