--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <tr>
         <td class="date-header">2025-05-09</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-05-09\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-09\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-09\spx_gex_history.html">SPX</a></li><li><a href="2025-05-09\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
@@ -78,7 +78,7 @@
     <tr>
         <td class="date-header">2025-05-08</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-05-08\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-08\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-08\spx_gex_history.html">SPX</a></li><li><a href="2025-05-08\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
@@ -89,7 +89,7 @@
     <tr>
         <td class="date-header">2025-05-07</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-05-07\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-07\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-07\spx_gex_history.html">SPX</a></li><li><a href="2025-05-07\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
@@ -100,7 +100,7 @@
     <tr>
         <td class="date-header">2025-05-06</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-05-06\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-06\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-06\spx_gex_history.html">SPX</a></li><li><a href="2025-05-06\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
@@ -111,7 +111,7 @@
     <tr>
         <td class="date-header">2025-05-05</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-05-05\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-05\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-05\spx_gex_history.html">SPX</a></li><li><a href="2025-05-05\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
@@ -122,7 +122,7 @@
     <tr>
         <td class="date-header">2025-05-02</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-05-02\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-02\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-02\spx_gex_history.html">SPX</a></li><li><a href="2025-05-02\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
