--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
     <tbody>
 
     <tr>
+        <td class="date-header">2025-05-13</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-13\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-13\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-13\spx_gex_history.html">SPX</a></li><li><a href="2025-05-13\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-13\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-13\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-13\spx_data_flow.html">SPX</a></li><li><a href="2025-05-13\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2025-05-12</td>
         <td>
             <ul class="file-list"><li><a href="2025-05-12\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-12\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-12\spx_gex_history.html">SPX</a></li><li><a href="2025-05-12\spy_gex_history.html">SPY</a></li>
