--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
     <title>GEX Dashboard - Índice</title>
     <style>
@@ -63,6 +63,19 @@
         </tr>
     </thead>
     <tbody>
+
+    <tr>
+        <td class="date-header">0DTE</td>
+        <td>
+            <ul class="file-list"><li><a href="ndx_gex_history.html">NDX</a></li><li><a href="qqq_gex_history.html">QQQ</a></li><li><a href="spx_gex_history.html">SPX</a></li><li><a href="spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="ndx_data_flow.html">NDX</a></li><li><a href="qqq_data_flow.html">QQQ</a></li><li><a href="spx_data_flow.html">SPX</a></li><li><a href="spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+
 
     <tr>
         <td class="date-header">2025-05-13</td>
