--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
     <tbody>
 
     <tr>
+        <td class="date-header">2025-05-16</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-16\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-16\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-16\spx_gex_history.html">SPX</a></li><li><a href="2025-05-16\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-05-16\ndx_data_flow.html">NDX</a></li><li><a href="2025-05-16\qqq_data_flow.html">QQQ</a></li><li><a href="2025-05-16\spx_data_flow.html">SPX</a></li><li><a href="2025-05-16\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2025-05-15</td>
         <td>
             <ul class="file-list"><li><a href="2025-05-15\ndx_gex_history.html">NDX</a></li><li><a href="2025-05-15\qqq_gex_history.html">QQQ</a></li><li><a href="2025-05-15\spx_gex_history.html">SPX</a></li><li><a href="2025-05-15\spy_gex_history.html">SPY</a></li>
