--- a/index.html
+++ b/index.html
@@ -284,6 +284,17 @@
             </ul>
         </td>
     </tr>
+    <tr>
+        <td class="date-header">20025-06-02</td>
+        <td>
+            <ul class="file-list"><li><a href="20025-06-02\ndx_gex_history.html">NDX</a></li><li><a href="20025-06-02\qqq_gex_history.html">QQQ</a></li><li><a href="20025-06-02\spx_gex_history.html">SPX</a></li><li><a href="20025-06-02\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="20025-06-02\ndx_data_flow.html">NDX</a></li><li><a href="20025-06-02\qqq_data_flow.html">QQQ</a></li><li><a href="20025-06-02\spx_data_flow.html">SPX</a></li><li><a href="20025-06-02\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+    </tr>
     </tbody>
 </table>
 <p style="color: gray; font-size: 12px; margin-top: 20px;">
