--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     <tr>
         <td class="date-header">2025-06-17</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-06-17\ndx_gex_history.html">NDX</a></li><li><a href="2025-06-17\qqq_gex_history.html">QQQ</a></li><li><a href="2025-06-17\spx_gex_history.html">SPX</a></li><li><a href="2025-06-17\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-06-17\ndx_data_flow.html">NDX</a></li><li><a href="2025-06-17\qqq_data_flow.html">QQQ</a></li><li><a href="2025-06-17\spx_data_flow.html">SPX</a></li><li><a href="2025-06-17\spy_data_flow.html">SPY</a></li>
             </ul>
         </td>
         <td>
