--- a/index.html
+++ b/index.html
@@ -69,6 +69,36 @@
     <tbody>
 
     <tr>
+        <td class="date-header">2028-08-22</td>
+        <td>
+            <ul class="file-list"><li><a href="2028-08-22\ndx_gex_history.html">NDX</a></li><li><a href="2028-08-22\qqq_gex_history.html">QQQ</a></li><li><a href="2028-08-22\spx_gex_history.html">SPX</a></li><li><a href="2028-08-22\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2028-08-22\ndx_data_flow.html">NDX</a></li><li><a href="2028-08-22\qqq_data_flow.html">QQQ</a></li><li><a href="2028-08-22\spx_data_flow.html">SPX</a></li><li><a href="2028-08-22\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2028-08-22\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2028-08-22\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2028-08-22\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2028-08-22\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2028-08-22\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2028-08-22\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2028-08-22\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2028-08-22\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2028-08-22\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2028-08-22\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2028-08-22\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2028-08-22\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-08-25</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-08-25\ndx_gex_history.html">NDX</a></li><li><a href="2025-08-25\qqq_gex_history.html">QQQ</a></li><li><a href="2025-08-25\spx_gex_history.html">SPX</a></li><li><a href="2025-08-25\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-08-25\ndx_data_flow.html">NDX</a></li><li><a href="2025-08-25\qqq_data_flow.html">QQQ</a></li><li><a href="2025-08-25\spx_data_flow.html">SPX</a></li><li><a href="2025-08-25\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-08-25\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2025-08-25\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2025-08-25\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2025-08-25\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2025-08-25\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2025-08-25\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2025-08-25\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2025-08-25\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2025-08-25\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2025-08-25\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2025-08-25\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2025-08-25\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2025-08-21</td>
         <td>
             <ul class="file-list"><li><a href="2025-08-21\ndx_gex_history.html">NDX</a></li><li><a href="2025-08-21\qqq_gex_history.html">QQQ</a></li><li><a href="2025-08-21\spx_gex_history.html">SPX</a></li><li><a href="2025-08-21\spy_gex_history.html">SPY</a></li>
