--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
         </td>
     </tr>
     <tr>
+        <td class="date-header">2025-08-29</td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-08-29\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2025-08-29\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2025-08-29\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2025-08-29\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2025-08-29\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2025-08-29\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2025-08-29\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2025-08-29\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2025-08-29\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2025-08-29\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2025-08-29\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2025-08-29\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2025-08-28</td>
         <td>
             <ul class="file-list"><li><a href="2025-08-28\ndx_gex_history.html">NDX</a></li><li><a href="2025-08-28\qqq_gex_history.html">QQQ</a></li><li><a href="2025-08-28\spx_gex_history.html">SPX</a></li><li><a href="2025-08-28\spy_gex_history.html">SPY</a></li>
