--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <tr>
         <td class="date-header">2025-08-29</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-08-29\ndx_gex_history.html">NDX</a></li><li><a href="2025-08-29\qqq_gex_history.html">QQQ</a></li><li><a href="2025-08-29\spx_gex_history.html">SPX</a></li><li><a href="2025-08-29\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2025-08-29\ndx_data_flow.html">NDX</a></li><li><a href="2025-08-29\qqq_data_flow.html">QQQ</a></li><li><a href="2025-08-29\spx_data_flow.html">SPX</a></li><li><a href="2025-08-29\spy_data_flow.html">SPY</a></li>
             </ul>
         </td>
         <td>
