--- a/index.html
+++ b/index.html
@@ -69,6 +69,51 @@
     <tbody>
 
     <tr>
+        <td class="date-header">2025-12-11</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-11\ndx_gex_history.html">NDX</a></li><li><a href="2025-12-11\qqq_gex_history.html">QQQ</a></li><li><a href="2025-12-11\spx_gex_history.html">SPX</a></li><li><a href="2025-12-11\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-11\ndx_data_flow.html">NDX</a></li><li><a href="2025-12-11\qqq_data_flow.html">QQQ</a></li><li><a href="2025-12-11\spx_data_flow.html">SPX</a></li><li><a href="2025-12-11\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-12-10</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-10\ndx_gex_history.html">NDX</a></li><li><a href="2025-12-10\qqq_gex_history.html">QQQ</a></li><li><a href="2025-12-10\spx_gex_history.html">SPX</a></li><li><a href="2025-12-10\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-10\ndx_data_flow.html">NDX</a></li><li><a href="2025-12-10\qqq_data_flow.html">QQQ</a></li><li><a href="2025-12-10\spx_data_flow.html">SPX</a></li><li><a href="2025-12-10\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-10\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2025-12-10\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2025-12-10\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2025-12-10\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2025-12-10\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2025-12-10\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2025-12-10\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2025-12-10\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2025-12-10\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2025-12-10\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2025-12-10\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2025-12-10\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-12-09</td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2025-12-08</td>
         <td>
             <ul class="file-list"><li><a href="2025-12-08\ndx_gex_history.html">NDX</a></li><li><a href="2025-12-08\qqq_gex_history.html">QQQ</a></li><li><a href="2025-12-08\spx_gex_history.html">SPX</a></li><li><a href="2025-12-08\spy_gex_history.html">SPY</a></li>
