--- a/index.html
+++ b/index.html
@@ -69,6 +69,36 @@
     <tbody>
 
     <tr>
+        <td class="date-header">2025-12-19</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-19\ndx_gex_history.html">NDX</a></li><li><a href="2025-12-19\qqq_gex_history.html">QQQ</a></li><li><a href="2025-12-19\spx_gex_history.html">SPX</a></li><li><a href="2025-12-19\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-19\ndx_data_flow.html">NDX</a></li><li><a href="2025-12-19\qqq_data_flow.html">QQQ</a></li><li><a href="2025-12-19\spx_data_flow.html">SPX</a></li><li><a href="2025-12-19\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2025-12-18</td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-18\ndx_gex_history.html">NDX</a></li><li><a href="2025-12-18\qqq_gex_history.html">QQQ</a></li><li><a href="2025-12-18\spx_gex_history.html">SPX</a></li><li><a href="2025-12-18\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2025-12-18\ndx_data_flow.html">NDX</a></li><li><a href="2025-12-18\qqq_data_flow.html">QQQ</a></li><li><a href="2025-12-18\spx_data_flow.html">SPX</a></li><li><a href="2025-12-18\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list">
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2025-12-17</td>
         <td>
             <ul class="file-list"><li><a href="2025-12-17\ndx_gex_history.html">NDX</a></li><li><a href="2025-12-17\qqq_gex_history.html">QQQ</a></li><li><a href="2025-12-17\spx_gex_history.html">SPX</a></li><li><a href="2025-12-17\spy_gex_history.html">SPY</a></li>
