--- a/index.html
+++ b/index.html
@@ -69,6 +69,66 @@
     <tbody>
 
     <tr>
+        <td class="date-header">2026-01-09</td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-09\ndx_gex_history.html">NDX</a></li><li><a href="2026-01-09\qqq_gex_history.html">QQQ</a></li><li><a href="2026-01-09\spx_gex_history.html">SPX</a></li><li><a href="2026-01-09\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-09\ndx_data_flow.html">NDX</a></li><li><a href="2026-01-09\qqq_data_flow.html">QQQ</a></li><li><a href="2026-01-09\spx_data_flow.html">SPX</a></li><li><a href="2026-01-09\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-09\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2026-01-09\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2026-01-09\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2026-01-09\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2026-01-09\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2026-01-09\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2026-01-09\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2026-01-09\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2026-01-09\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2026-01-09\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2026-01-09\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2026-01-09\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2026-01-08</td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-08\ndx_gex_history.html">NDX</a></li><li><a href="2026-01-08\qqq_gex_history.html">QQQ</a></li><li><a href="2026-01-08\spx_gex_history.html">SPX</a></li><li><a href="2026-01-08\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-08\ndx_data_flow.html">NDX</a></li><li><a href="2026-01-08\qqq_data_flow.html">QQQ</a></li><li><a href="2026-01-08\spx_data_flow.html">SPX</a></li><li><a href="2026-01-08\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-08\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2026-01-08\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2026-01-08\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2026-01-08\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2026-01-08\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2026-01-08\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2026-01-08\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2026-01-08\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2026-01-07</td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-07\ndx_gex_history.html">NDX</a></li><li><a href="2026-01-07\qqq_gex_history.html">QQQ</a></li><li><a href="2026-01-07\spx_gex_history.html">SPX</a></li><li><a href="2026-01-07\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-07\ndx_data_flow.html">NDX</a></li><li><a href="2026-01-07\qqq_data_flow.html">QQQ</a></li><li><a href="2026-01-07\spx_data_flow.html">SPX</a></li><li><a href="2026-01-07\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-07\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2026-01-07\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2026-01-07\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2026-01-07\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2026-01-07\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2026-01-07\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2026-01-07\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2026-01-07\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2026-01-07\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2026-01-07\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2026-01-07\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2026-01-07\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td class="date-header">2026-01-06</td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-06\ndx_gex_history.html">NDX</a></li><li><a href="2026-01-06\qqq_gex_history.html">QQQ</a></li><li><a href="2026-01-06\spx_gex_history.html">SPX</a></li><li><a href="2026-01-06\spy_gex_history.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-06\ndx_data_flow.html">NDX</a></li><li><a href="2026-01-06\qqq_data_flow.html">QQQ</a></li><li><a href="2026-01-06\spx_data_flow.html">SPX</a></li><li><a href="2026-01-06\spy_data_flow.html">SPY</a></li>
+            </ul>
+        </td>
+        <td>
+            <ul class="file-list"><li><a href="2026-01-06\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2026-01-06\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2026-01-06\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2026-01-06\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2026-01-06\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2026-01-06\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2026-01-06\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2026-01-06\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2026-01-06\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2026-01-06\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2026-01-06\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2026-01-06\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
         <td class="date-header">2026-01-05</td>
         <td>
             <ul class="file-list"><li><a href="2026-01-05\ndx_gex_history.html">NDX</a></li><li><a href="2026-01-05\qqq_gex_history.html">QQQ</a></li><li><a href="2026-01-05\spx_gex_history.html">SPX</a></li><li><a href="2026-01-05\spy_gex_history.html">SPY</a></li>
@@ -2150,21 +2210,6 @@
         </td>
         <td>
             <ul class="file-list"><li><a href="2025-05-02\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2025-05-02\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2025-05-02\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2025-05-02\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2025-05-02\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2025-05-02\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2025-05-02\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2025-05-02\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
-            </ul>
-        </td>
-    </tr>
-    <tr>
-        <td class="date-header">2025-01-06</td>
-        <td>
-            <ul class="file-list"><li><a href="2025-01-06\ndx_gex_history.html">NDX</a></li><li><a href="2025-01-06\qqq_gex_history.html">QQQ</a></li><li><a href="2025-01-06\spx_gex_history.html">SPX</a></li><li><a href="2025-01-06\spy_gex_history.html">SPY</a></li>
-            </ul>
-        </td>
-        <td>
-            <ul class="file-list"><li><a href="2025-01-06\ndx_data_flow.html">NDX</a></li><li><a href="2025-01-06\qqq_data_flow.html">QQQ</a></li><li><a href="2025-01-06\spx_data_flow.html">SPX</a></li><li><a href="2025-01-06\spy_data_flow.html">SPY</a></li>
-            </ul>
-        </td>
-        <td>
-            <ul class="file-list"><li><a href="2025-01-06\qqq_heatmap.html" class="heatmap-link">🔥 QQQ HEATMAP</a></li><li><a href="2025-01-06\qqq_heatmap_cex.html" class="heatmap-link">🔥 QQQ HEATMAP_CEX</a></li><li><a href="2025-01-06\qqq_heatmap_dex.html" class="heatmap-link">🔥 QQQ HEATMAP_DEX</a></li><li><a href="2025-01-06\qqq_heatmap_vex.html" class="heatmap-link">🔥 QQQ HEATMAP_VEX</a></li><li><a href="2025-01-06\spx_heatmap.html" class="heatmap-link">🔥 SPX HEATMAP</a></li><li><a href="2025-01-06\spx_heatmap_cex.html" class="heatmap-link">🔥 SPX HEATMAP_CEX</a></li><li><a href="2025-01-06\spx_heatmap_dex.html" class="heatmap-link">🔥 SPX HEATMAP_DEX</a></li><li><a href="2025-01-06\spx_heatmap_vex.html" class="heatmap-link">🔥 SPX HEATMAP_VEX</a></li><li><a href="2025-01-06\spy_heatmap.html" class="heatmap-link">🔥 SPY HEATMAP</a></li><li><a href="2025-01-06\spy_heatmap_cex.html" class="heatmap-link">🔥 SPY HEATMAP_CEX</a></li><li><a href="2025-01-06\spy_heatmap_dex.html" class="heatmap-link">🔥 SPY HEATMAP_DEX</a></li><li><a href="2025-01-06\spy_heatmap_vex.html" class="heatmap-link">🔥 SPY HEATMAP_VEX</a></li>
             </ul>
         </td>
     </tr>
