--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <tr>
         <td class="date-header">2026-02-13</td>
         <td>
-            <ul class="file-list">
+            <ul class="file-list"><li><a href="2026-02-13\ndx_gex_history.html">NDX</a></li><li><a href="2026-02-13\qqq_gex_history.html">QQQ</a></li><li><a href="2026-02-13\spx_gex_history.html">SPX</a></li><li><a href="2026-02-13\spy_gex_history.html">SPY</a></li>
             </ul>
         </td>
         <td>
